<resources>
    <string name="app_name">AndroidVelov</string>

    <!-- NAV DRAWER -->
    <string name="navigation_drawer_open">Ouvrir le navigation drawer</string>
    <string name="navigation_drawer_close">Fermer le navigation drawer</string>
    <string name="nav_header_title">AndroidVelov</string>
    <string name="nav_header_subtitle">Sous-titre</string>
    <string name="nav_header_desc">En-tête de navigation</string>

    <!-- MAIN ACTIVITY -->
    <string name="title_activity_main">MainActivity</string>
    <string name="search">Recherche</string>

    <!-- MAP FRAGMENT -->
    <string name="title_fragment_station_map">Carte</string>
    <string name="station_map_search_hint">Rechercher une station</string>

    <!-- LIST FRAGMENT -->
    <string name="title_fragment_station_list">Liste</string>

    <!-- DETAILS FRAGMENT -->
    <string name="title_fragment_station_detail">Détails</string>

    <string name="data_address">Emplacement : </string>
    <string name="data_latitude">Latitude : </string>
    <string name="data_longitude">Longitude : </string>
    <string name="data_banking">Paiement : </string>
    <string name="data_bonus">Bonus : </string>
    <string name="data_status">État : </string>
    <string name="data_contractName">Ville : </string>
    <string name="data_bikeStands">Emplacements total : </string>
    <string name="data_availableBikeStands">Emplacement disponibles : </string>
    <string name="data_availableBikes">Vélos disponibles : </string>
    <string name="data_lastUpdate">Dernière mise à jour : </string>

    <string name="data_banking_true">Disponible</string>
    <string name="data_banking_false">Indisponible</string>
    <string name="data_bonus_true">Oui</string>
    <string name="data_bonus_false">Non</string>

    <!-- DIALOGS -->
    <string name="toast_loadSavedData">Connexion impossible. Affichage des dernières données téléchargées.</string>

    <string name="dialog_noConnection_title">Vous n\'êtes pas connecté à Internet</string>
    <string name="dialog_noConnection_content">
        Impossible de télécharger les données.
        Essayez de vérifier vos paramêtres de connexion ?
    </string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Annuler</string>
    <string name="dialog_yes">Oui</string>
    <string name="dialog_no">Non</string>

    <string name="title_location_permission">Permission de localisation</string>
    <string name="text_location_permission">Afin de trouver les stations les plus proches, il est nécessaire d\'accéder à votre localisation</string>

    <string name="sharedPrefFile">pref</string>
    <string name="sharedPrefFavorites">favorites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
